--- a/html/productsite.html
+++ b/html/productsite.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="Example description">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="../css/productsite.css">
-	<link rel="icon" type="image/x-icon" href="../images/Udklip.PNG"/>
+	<link rel="icon" type="image/x-icon" href="../images/logo-test.png"/>
 </head>
 
 <body>
